# Multi-agent_research_assistant

./: .gitignore  README.md  main.py
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/agents/: nodes.py  state.py  workflow.py
backend/app/api/: models.py  routes.py
backend/app/core/: config.py  runtime_store.py
backend/app/tools/: output.py  research.py
frontend/: DockerFile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatInterface.tsx  Dashboard.tsx  Layout.tsx  MarkdownRenderer.tsx  ResearchHistory.tsx  Settings.tsx
frontend/src/hooks/: useResearch.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
