[project]
name = "mara-backend"
version = "0.1.0"
description = "Multi-Agent Research Assistant Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "tavily-python>=0.3.0",
    "arxiv>=2.1.0",
    "markdown2>=2.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "langchain-tavily==0.2.17",
    "tenacity>=9.1.2",
]
